feat: 更新 Day 4 & Day 5 九寨溝深度遊行程與 5 月遊玩錦囊

--- a/day4.html
+++ b/day4.html
@@ -365,10 +365,9 @@
         <h2>🎯 遊覽策略</h2>
     </div>
     <div class="strat">
-        <h3>🗺️ 九寨溝「Y」字型路線攻略</h3>
-        <p>九寨溝分為3條溝：<strong>樹正溝</strong>（入口段）、<strong>日則溝</strong>（右支）、<strong>則查窪溝</strong>（左支），整體呈「Y」字型。</p>
-        <p>💡 <strong>建議策略</strong>：一早入園 → 搭觀光車直衝最高點（長海/原始森林）→ 再一路往下走棧道，邊走邊拍。這樣順光拍照效果最好，而且是下坡比較輕鬆！</p>
-        <p>🍱 景區內唯一餐廳在「諾日朗中心站」，建議也自備一些乾糧和水。</p>
+        <h3>🗺️ Day 4 重點：直奔精華（日則溝 + 樹正溝中段）</h3>
+        <p>這天體力最充沛，直接去最美的地方！</p>
+        <p>💡 <strong>核心策略</strong>：早買早享受，早入園避開大團 → 觀光車直達「原始森林」或「箭竹海」 → 沿途往下走遊覽日則溝精華 → 下午回到主幹道看瀑布與海子。</p>
     </div>
 
     <div class="sec-head">
@@ -382,10 +381,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🌅 07:00</div>
-                <div class="tl-title">早起入園</div>
-                <div class="tl-desc">建議7點前到達景區入口排隊。九寨溝每日限流，越早入園人越少、水面越平靜，拍出的倒影照最美！</div>
-                <div class="tl-tags"><span class="tl-tag">🎫 入園</span><span class="tl-tag">📸 黃金時段</span></div>
+                <div class="tl-time">🌅 07:30 – 08:00</div>
+                <div class="tl-title">早鳥入園</div>
+                <div class="tl-desc">從住的彭豐村出發，走路約15分鐘就能到門口。建議越早越好，避開大團！</div>
+                <div class="tl-tags"><span class="tl-tag">🚶 步行</span><span class="tl-tag">🎫 入園</span></div>
             </div>
         </div>
 
@@ -395,10 +394,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚌 07:30 – 08:30</div>
-                <div class="tl-title">觀光車直達則查窪溝頂端</div>
-                <div class="tl-desc">搭環保觀光車直接上到「長海」——九寨溝海拔最高、面積最大的海子。湖水碧藍深邃，被雪山和原始森林環繞，壯觀到無法用言語形容。</div>
-                <div class="tl-tags"><span class="tl-tag">🏔️ 長海</span><span class="tl-tag">海拔3100m</span></div>
+                <div class="tl-time">🚌 08:00 – 08:40</div>
+                <div class="tl-title">直攻右支頂點</div>
+                <div class="tl-desc">搭乘觀光車直接坐到「原始森林」（5 月底新綠正美），或者在「芳草海/箭竹海」下車，準備一路向下漫步遊覽。</div>
+                <div class="tl-tags"><span class="tl-tag">🚐 觀光車</span><span class="tl-tag">🌲 原始森林</span></div>
             </div>
         </div>
 
@@ -408,24 +407,13 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">💎 09:00 – 10:00</div>
-                <div class="tl-title">五彩池 ✨</div>
-                <div class="tl-desc">九寨溝最小但最驚豔的海子！水色隨角度變化呈現翡翠綠、寶石藍、琥珀黃⋯⋯像一顆鑲嵌在山谷間的寶石。從長海步行下來約20分鐘就到。</div>
-                <div class="tl-tags"><span class="tl-tag">💎 五彩池</span><span class="tl-tag">📸 必拍</span><span
-                        class="tl-tag">🌈 變幻色彩</span></div>
-            </div>
-        </div>
-
-        <div class="tl-item">
-            <div class="tl-line">
-                <div class="tl-dot"></div>
-                <div class="tl-bar"></div>
-            </div>
-            <div class="tl-card">
-                <div class="tl-time">🌊 10:30 – 12:00</div>
-                <div class="tl-title">諾日朗瀑布</div>
-                <div class="tl-desc">中國最寬的鈣華瀑布！寬270米，水幕從山崖飛流直下，氣勢磅礡。是九寨溝的標誌性景觀，也是《西遊記》片尾曲的取景地。</div>
-                <div class="tl-tags"><span class="tl-tag">🌊 諾日朗瀑布</span><span class="tl-tag">📸 西遊記取景地</span></div>
+                <div class="tl-time">🌺 09:00 – 11:30</div>
+                <div class="tl-title">必看亮點 (日則溝)</div>
+                <div class="tl-desc">沿著棧道往下走，精華一次看齊：<br>• <strong>鏡海</strong>：建議上午10:00前抵達，湖面平靜如鏡，倒影最美。<br>•
+                    <strong>五花海</strong>：九寨溝的靈魂，5月陽光灑下時，湖底鈣化焦木清晰可見。<br>• <strong>珍珠灘瀑布</strong>：《西遊記》取景地，此時水量增大，氣勢很足。
+                </div>
+                <div class="tl-tags"><span class="tl-tag">🪞 鏡海</span><span class="tl-tag">🌺 五花海</span><span
+                        class="tl-tag">💦 珍珠灘</span></div>
             </div>
         </div>
 
@@ -436,36 +424,9 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time">🍱 12:00 – 13:00</div>
-                <div class="tl-title">諾日朗中心站午餐</div>
-                <div class="tl-desc">景區內唯一的用餐點。有自助餐和簡餐可選。吃飽了繼續征戰日則溝！</div>
-                <div class="tl-tags"><span class="tl-tag">🍱 午餐</span></div>
-            </div>
-        </div>
-
-        <div class="tl-item">
-            <div class="tl-line">
-                <div class="tl-dot"></div>
-                <div class="tl-bar"></div>
-            </div>
-            <div class="tl-card">
-                <div class="tl-time">🌿 13:00 – 15:00</div>
-                <div class="tl-title">五花海 🌺</div>
-                <div class="tl-desc">「九寨溝的驕傲」！被譽為九寨溝最美的海子。水底的古木和藻類呈現翡翠、鵝黃、寶藍、深橙⋯多種顏色交織，像一幅上帝打翻的調色盤。站在老虎嘴觀景台俯瞰效果最佳。</div>
-                <div class="tl-tags"><span class="tl-tag">🌺 五花海</span><span class="tl-tag">📸 九寨之最</span><span
-                        class="tl-tag">🎨 調色盤湖</span></div>
-            </div>
-        </div>
-
-        <div class="tl-item">
-            <div class="tl-line">
-                <div class="tl-dot"></div>
-                <div class="tl-bar"></div>
-            </div>
-            <div class="tl-card">
-                <div class="tl-time">💦 15:00 – 16:00</div>
-                <div class="tl-title">珍珠灘瀑布</div>
-                <div class="tl-desc">水流經過鈣化灘面時激起無數白色水珠，猶如珍珠四濺。瀑布寬度約162米，沿棧道步行近距離感受水霧飛濺的清涼感。</div>
-                <div class="tl-tags"><span class="tl-tag">💦 珍珠灘</span><span class="tl-tag">📸 瀑布</span></div>
+                <div class="tl-title">午餐時間</div>
+                <div class="tl-desc">因為景區內只有諾日朗中心有自助餐（人多且貴），建議隨身帶點巧克力、牛肉乾，坐在海子邊野餐更舒服。</div>
+                <div class="tl-tags"><span class="tl-tag">🥪 野餐</span></div>
             </div>
         </div>
 
@@ -474,18 +435,18 @@
                 <div class="tl-dot"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 16:00 – 17:30</div>
-                <div class="tl-title">樹正群海 → 出園</div>
-                <div class="tl-desc">沿樹正溝棧道往下走，經過樹正群海、犀牛海——一連串大小海子如珍珠般串在一起。這段路光線最好，是拍攝倒影的絕佳時刻。走到溝口出園，結束充實的一天！</div>
-                <div class="tl-tags"><span class="tl-tag">🌲 樹正群海</span><span class="tl-tag">🦏 犀牛海</span><span
-                        class="tl-tag">🚶 棧道</span></div>
+                <div class="tl-time">🌊 13:30 – 16:30</div>
+                <div class="tl-title">諾日朗瀑布與樹正溝中段</div>
+                <div class="tl-desc">轉往主幹道的「諾日朗瀑布」，然後沿著樹正溝棧道漫步欣賞「犀牛海」和「老虎海」，邊走邊拍慢慢出園。</div>
+                <div class="tl-tags"><span class="tl-tag">🌊 諾日朗瀑布</span><span class="tl-tag">🦏 犀牛海</span></div>
             </div>
         </div>
     </div>
 
     <!-- 完整圖片展示區塊 -->
     <div style="padding: 16px 16px 0;">
-        <img src="images/Day4.png" alt="Day 4" style="width: 100%; height: auto; border-radius: 12px; box-shadow: var(--shadow); display: block;">
+        <img src="images/Day4.png" alt="Day 4"
+            style="width: 100%; height: auto; border-radius: 12px; box-shadow: var(--shadow); display: block;">
     </div>
 
     <div class="sec-head">
@@ -500,7 +461,7 @@
         </div>
     </div>
 
-    
+
 
     <div class="sec-head">
         <div class="dot" style="background:#3B82F6"></div>
@@ -513,10 +474,10 @@
         <h2>💡 今日提醒</h2>
     </div>
     <div class="tips">
-        <div class="tip"><span class="tip-ic">🚶</span><span>今天步行量大（約15-20km），穿舒適的登山鞋或運動鞋，帶雙備用襪子。</span></div>
-        <div class="tip"><span class="tip-ic">☀️</span><span>高原紫外線強！塗好防曬霜（SPF50+），戴帽子和太陽眼鏡。</span></div>
-        <div class="tip"><span class="tip-ic">📸</span><span>手機拍照建議開HDR模式，水面倒影效果最好。自拍桿景區不限制。</span></div>
-        <div class="tip"><span class="tip-ic">🫁</span><span>高海拔注意呼吸節奏，爬坡時慢慢來，不要憋氣拍照。感覺頭疼就休息。</span></div>
+        <div class="tip"><span class="tip-ic">🧥</span><span>洋蔥式穿衣：5月早晚約9°C，中午可達25°C。建議內層長袖、中層背心、外層防水防風外套。</span></div>
+        <div class="tip"><span class="tip-ic">☀️</span><span>紫外線監測：高原地區紫外線極強，防曬乳、墨鏡、遮陽帽是標配。</span></div>
+        <div class="tip"><span class="tip-ic">🫁</span><span>水分補給：園區最高海拔達3100米，多喝水、動作放慢能有效避免輕微高反。</span></div>
+        <div class="tip"><span class="tip-ic">📸</span><span>拍照建議：上午10點前的「鏡海」無風倒影最完美；「五花海」湖底有焦木，陽光灑下時色彩最豔麗。</span></div>
     </div>
 
     <div class="nav-btns"><a class="btn-prev" href="day3.html">← Day 3</a><a class="btn-next" href="day5.html">Day 5 ·
