--- a/day5.html
+++ b/day5.html
@@ -334,12 +334,13 @@
 
     <!-- 完整圖片展示區塊 -->
     <div style="padding: 16px 16px 0;">
-        <img src="images/Day5.png" alt="Day 5" style="width: 100%; height: auto; border-radius: 12px; box-shadow: var(--shadow); display: block;">
+        <img src="images/Day5.png" alt="Day 5"
+            style="width: 100%; height: auto; border-radius: 12px; box-shadow: var(--shadow); display: block;">
     </div>
 
     <div class="sec-head">
         <div class="dot" style="background:var(--c)"></div>
-        <h2>📍 今日行程</h2>
+        <h2>📍 今日行程 & 遺珠補齊</h2>
     </div>
     <div class="timeline">
         <div class="tl-item">
@@ -348,10 +349,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🌅 07:00 – 07:30</div>
-                <div class="tl-title">二度入園！</div>
-                <div class="tl-desc">再次早起入園。今天的目標是：昨天沒看夠的景點補考、光線不對沒拍好的海子重拍、享受更悠閒的慢步調。</div>
-                <div class="tl-tags"><span class="tl-tag">🎫 二進溝</span><span class="tl-tag">📸 補考</span></div>
+                <div class="tl-time">🌅 08:30 – 10:30</div>
+                <div class="tl-title">左支探秘：長海</div>
+                <div class="tl-desc">這天可以稍晚一點入園。搭車前往海拔最高的「長海」。5月份遠處雪山可能還有殘雪，配上湛藍湖水非常大氣。</div>
+                <div class="tl-tags"><span class="tl-tag">🏔️ 長海</span><span class="tl-tag">海拔3100m</span></div>
             </div>
         </div>
 
@@ -361,12 +362,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🌿 07:30 – 12:00</div>
-                <div class="tl-title">精選景點深度遊</div>
-                <div class="tl-desc">根據昨天的遺珠，挑選最想再看的海子慢慢品味。建議重訪五花海（早上光線不同，顏色完全變化）、鏡海（清晨無風時的完美倒影）。走棧道instead
-                    of坐車，感受原始森林的寧靜。</div>
-                <div class="tl-tags"><span class="tl-tag">🪞 鏡海</span><span class="tl-tag">🌺 五花海</span><span
-                        class="tl-tag">🌲 原始森林</span></div>
+                <div class="tl-time">💎 10:30 – 12:00</div>
+                <div class="tl-title">五彩池</div>
+                <div class="tl-desc">雖然5月是枯水期，五彩池水位相對低，但勝在色彩極度濃郁，依舊值得一拍。</div>
+                <div class="tl-tags"><span class="tl-tag">💎 五彩池</span><span class="tl-tag">📸 必拍</span></div>
             </div>
         </div>
 
@@ -376,10 +375,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 12:00 – 13:30</div>
-                <div class="tl-title">午餐 & 出溝</div>
-                <div class="tl-desc">在景區內簡單用餐後，下午出溝。回民宿拿行李、退房。</div>
-                <div class="tl-tags"><span class="tl-tag">🧳 退房</span></div>
+                <div class="tl-time">🌲 13:00 – 14:30</div>
+                <div class="tl-title">漫步樹正溝下段</div>
+                <div class="tl-desc">昨天沒看完的樹正群海、火花海（看那種疊瀑景觀），今天可以補齊。</div>
+                <div class="tl-tags"><span class="tl-tag">🌲 樹正群海</span><span class="tl-tag">✨ 火花海</span></div>
             </div>
         </div>
 
@@ -389,11 +388,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚕 14:30 – 16:30</div>
-                <div class="tl-title">拼車/大巴 → 川主寺鎮</div>
-                <div class="tl-desc">從九寨溝搭車前往松潘縣的「川主寺鎮」，車程約2小時。沿途是壯麗的高原公路風景，草甸、犛牛、雪山盡收眼底。</div>
-                <div class="tl-tags"><span class="tl-tag">🚕 拼車</span><span class="tl-tag">⏱ ~2hr</span><span
-                        class="tl-tag">🏔️ 高原公路</span></div>
+                <div class="tl-time">🏘️ 14:30 – 15:30</div>
+                <div class="tl-title">藏寨文化體驗</div>
+                <div class="tl-desc">去樹正寨或則查窪寨逛逛，喝碗酥油茶，感受一下當地的藏族風情，順便在寨子裡買點補給。</div>
+                <div class="tl-tags"><span class="tl-tag">🏘️ 藏寨風情</span><span class="tl-tag">🍵 酥油茶</span></div>
             </div>
         </div>
 
@@ -402,17 +400,15 @@
                 <div class="tl-dot"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🏕️ 17:00</div>
-                <div class="tl-title">雲起·迦境 Check-in · 藏式晚宴</div>
-                <div class="tl-desc">入住藏式奢享民宿！這間民宿環境漂亮，有藏式裝潢和暖暖的氛圍。更棒的是他們提供「黃龍九寨高鐵站」免費拼車接送服務，記得提前打電話跟老闆確認明天去黃龍的接送時間！📞
-                    +86-13281872333</div>
-                <div class="tl-tags"><span class="tl-tag">🏕️ 藏式民宿</span><span class="tl-tag">📞 預約接送</span><span
-                        class="tl-tag">🍖 藏式晚餐</span></div>
+                <div class="tl-time">🚕 16:00 – 18:00</div>
+                <div class="tl-title">離溝 & 赴川主寺鎮</div>
+                <div class="tl-desc">約下午 3-4 點左右出溝，取完行李剛好可以銜接傍晚往松潘/川主寺的行程。入住藏式奢享民宿，別忘了跟老闆預約明天去黃龍的接送時間！</div>
+                <div class="tl-tags"><span class="tl-tag">🚕 拼車</span><span class="tl-tag">🏕️ 藏式民宿</span></div>
             </div>
         </div>
     </div>
 
-    
+
 
     <div class="sec-head">
         <div class="dot" style="background:#0D9488"></div>
@@ -427,7 +423,7 @@
         </div>
     </div>
 
-    
+
 
     <div class="sec-head">
         <div class="dot" style="background:#3B82F6"></div>
@@ -440,10 +436,10 @@
         <h2>💡 今日提醒</h2>
     </div>
     <div class="tips">
-        <div class="tip"><span class="tip-ic">📞</span><span><strong>重要！</strong>抵達民宿後立刻打電話 (+86-13281872333)
-                跟老闆確認明天去黃龍的接送時間。</span></div>
-        <div class="tip"><span class="tip-ic">🏔️</span><span>明天的黃龍景區最高處海拔3500m+，是整趟旅程最高點。今晚好好休息、多喝水！</span></div>
-        <div class="tip"><span class="tip-ic">🧥</span><span>川主寺海拔約3000m，夜晚非常冷（可能5°C以下），穿暖！</span></div>
+        <div class="tip"><span class="tip-ic">🚌</span><span>出溝後交通：約下午 3-4 點左右出溝，剛好可以銜接傍晚往松潘/川主寺的拼車或高鐵直通車行程。</span>
+        </div>
+        <div class="tip"><span class="tip-ic">📞</span><span>抵達民宿記得確認：抵達雲起·迦境後，立刻向老闆確認明天黃龍景區免費接送的時間。</span></div>
+        <div class="tip"><span class="tip-ic">🧥</span><span>川主寺海拔約3000m，夜晚非常冷，抵達後務必添加保暖衣物！</span></div>
     </div>
 
     <div class="nav-btns"><a class="btn-prev" href="day4.html">← Day 4</a><a class="btn-next" href="day6.html">Day 6 ·
