feat: 更新 Day 6 黃龍景區行程與防高反建議

--- a/day6.html
+++ b/day6.html
@@ -360,7 +360,8 @@
 
     <!-- 完整圖片展示區塊 -->
     <div style="padding: 16px 16px 0;">
-        <img src="images/Day6.png" alt="Day 6" style="width: 100%; height: auto; border-radius: 12px; box-shadow: var(--shadow); display: block;">
+        <img src="images/Day6.png" alt="Day 6"
+            style="width: 100%; height: auto; border-radius: 12px; box-shadow: var(--shadow); display: block;">
     </div>
 
     <div class="sec-head">
@@ -368,10 +369,11 @@
         <h2>🎯 遊覽策略</h2>
     </div>
     <div class="strat">
-        <h3>🚡 黃龍攻略：索道上，步行下</h3>
-        <p>💡 <strong>強烈建議「索道（纜車）上，步行下」！</strong>搭纜車到頂後步行前往五彩池，再沿步道一路下山欣賞鈣化池地貌。</p>
-        <p>🏔️ 黃龍最高處海拔約3500m，是這趟旅程最高點。纜車上山可以節省體力、減少高山反應風險。</p>
-        <p>⏱️ 全程約3-4小時就能走完，下午有充足時間搭高鐵返回成都。</p>
+        <h3>🚡 黃龍攻略：索道上，步行下（不回頭路線）</h3>
+        <p>黃龍景區以規模宏大的鈣化彩池聞名，海拔較高（約 3,100 至 3,600 公尺）。核心策略是<strong>保存體力與預防高反</strong>。</p>
+        <p>💡 <strong>推薦路線</strong>：景區入口 → 搭乘黃龍索道（上行） → 索道上站 → 步行至望龍坪觀景台 → 原始森林棧道（約2.5公里） → 五彩池 →
+            下山步道（黃龍古寺/爭艷池/金沙鋪地/洗身洞等） → 迎賓池 → 景區出口。</p>
+        <p>⏱️ 這是最省體力且能看遍所有美景的經典走法，全程約 3-4 小時。</p>
     </div>
 
     <div class="sec-head">
@@ -385,10 +387,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚗 07:00 – 07:40</div>
-                <div class="tl-title">川主寺 → 黃龍景區</div>
-                <div class="tl-desc">民宿老闆安排車子送你們到黃龍景區，車程約40分鐘。早起空氣清新，沿途高原風光太美了。</div>
-                <div class="tl-tags"><span class="tl-tag">🚗 民宿接送</span><span class="tl-tag">⏱ ~40min</span></div>
+                <div class="tl-time">🚗 08:30</div>
+                <div class="tl-title">抵達黃龍景區</div>
+                <div class="tl-desc">從川主寺出發約 30-40 分鐘車程。建議避開團客大軍，盡早入園。</div>
+                <div class="tl-tags"><span class="tl-tag">🚗 抵達</span><span class="tl-tag">🎫 早鳥</span></div>
             </div>
         </div>
 
@@ -398,10 +400,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚡 08:00 – 08:30</div>
-                <div class="tl-title">索道纜車上山</div>
-                <div class="tl-desc">搭乘纜車直達山頂區域，約8分鐘。纜車裡可以俯瞰整個黃龍溝谷和遠處的雪寶頂雪山，起霧前上去很重要！</div>
-                <div class="tl-tags"><span class="tl-tag">🚡 纜車</span><span class="tl-tag">🏔️ 海拔3470m</span></div>
+                <div class="tl-time">🚡 09:00 – 10:30</div>
+                <div class="tl-title">直攻頂點：索道上山</div>
+                <div class="tl-desc">搭乘索道後，沿著平緩的森林棧道走向五彩池。這段路海拔約 3,500 公尺，請放慢腳步。</div>
+                <div class="tl-tags"><span class="tl-tag">🚡 纜車</span><span class="tl-tag">🌲 森林棧道</span></div>
             </div>
         </div>
 
@@ -411,12 +413,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">💛 08:30 – 10:00</div>
-                <div class="tl-title">五彩池 ✨ 黃龍之冠</div>
-                <div class="tl-desc">
-                    從纜車站步行約30分鐘到達黃龍最頂端的「五彩池」——693個鈣華彩池錯落在雪山腳下，水面呈現翡翠綠、孔雀藍、琥珀黃⋯⋯如同人間瑤池。這是黃龍最精華的景點，一定要多拍幾張！</div>
-                <div class="tl-tags"><span class="tl-tag">💛 五彩池</span><span class="tl-tag">📸 必拍</span><span
-                        class="tl-tag">🏔️ 人間瑤池</span></div>
+                <div class="tl-time">💛 10:30 – 11:30</div>
+                <div class="tl-title">五彩池深度攝影</div>
+                <div class="tl-desc">黃龍的靈魂，規模最大、顏色最豐富的彩池群。5月份陽光充足時，池水呈現深藍、淺綠、明黃等色彩。背景是巍峨的岷山主峰雪寶頂！</div>
+                <div class="tl-tags"><span class="tl-tag">💛 五彩池</span><span class="tl-tag">📸 必拍精華</span></div>
             </div>
         </div>
 
@@ -426,12 +426,11 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚶 10:00 – 12:00</div>
-                <div class="tl-title">步行下山 · 飛瀑流輝 · 迎賓池</div>
-                <div class="tl-desc">
-                    沿木棧道一路下山，經過「爭豔池」、「飛瀑流輝」、「洗身洞」、「盆景池」⋯⋯到最下方的「迎賓池」。整條溝谷3.6公里佈滿金黃色鈣華地貌，像一條金色巨龍盤踞在山間，壯觀無比。</div>
-                <div class="tl-tags"><span class="tl-tag">🐉 金色鈣華</span><span class="tl-tag">💦 飛瀑流輝</span><span
-                        class="tl-tag">🚶 下坡輕鬆</span></div>
+                <div class="tl-time">🚶 11:30 – 14:30</div>
+                <div class="tl-title">慢步下山（約4公里）</div>
+                <div class="tl-desc">這段路是黃龍的精華，沿途欣賞「爭艷池」（色彩變幻莫測）、「金沙鋪地」（1.3公里的金黃色鈣化灘流）以及「洗身洞」（巨大的鈣化壁掛瀑布）。</div>
+                <div class="tl-tags"><span class="tl-tag">🐉 金沙鋪地</span><span class="tl-tag">💦 洗身洞</span><span
+                        class="tl-tag">🚶 漫步下坡</span></div>
             </div>
         </div>
 
@@ -441,10 +440,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚗 12:30 – 13:30</div>
-                <div class="tl-title">前往黃龍九寨高鐵站</div>
-                <div class="tl-desc">遊覽完畢，聯繫民宿使用免費高鐵接送服務前往「黃龍九寨站」。或在景區門口找拼車。</div>
-                <div class="tl-tags"><span class="tl-tag">🚗 接送</span><span class="tl-tag">📞 提前聯繫</span></div>
+                <div class="tl-time">🚪 15:00</div>
+                <div class="tl-title">出園 & 前往高鐵站</div>
+                <div class="tl-desc">完成行程，體力消耗適中，剛好可以銜接後續前往黃龍九寨高鐵站的交通或接駁車。</div>
+                <div class="tl-tags"><span class="tl-tag">🚪 出園</span><span class="tl-tag">🚗 交通銜接</span></div>
             </div>
         </div>
 
@@ -454,7 +453,7 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚄 14:00 – 16:00</div>
+                <div class="tl-time">🚄 16:00 – 18:00</div>
                 <div class="tl-title">高鐵返回成都東站</div>
                 <div class="tl-desc">搭乘川青高鐵返回成都東站，車程約1.5-2小時。在車上好好休息，回顧這幾天拍的美照！</div>
                 <div class="tl-tags"><span class="tl-tag">🚄 川青高鐵</span><span class="tl-tag">⏱ ~2hr</span></div>
@@ -466,8 +465,8 @@
                 <div class="tl-dot"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🏨 17:00 – 21:00</div>
-                <div class="tl-title">入住新飯店 · 擔擔麵晚餐</div>
+                <div class="tl-time">🏨 19:00</div>
+                <div class="tl-title">入住新飯店 · 回到都市</div>
                 <div class="tl-desc">抵達成都，前往春熙商圈的「凱特麗亞創意主題飯店公寓」辦理入住。晚上在附近吃碗道地的擔擔麵或鍾水餃，享受回到低海拔的舒適感！</div>
                 <div class="tl-tags"><span class="tl-tag">🏨 新飯店</span><span class="tl-tag">🍜 擔擔麵</span><span
                         class="tl-tag">🥟 鍾水餃</span></div>
@@ -475,7 +474,7 @@
         </div>
     </div>
 
-    
+
 
     <div class="sec-head">
         <div class="dot" style="background:#0D9488"></div>
@@ -489,7 +488,7 @@
         </div>
     </div>
 
-    
+
 
     <div class="sec-head">
         <div class="dot" style="background:#3B82F6"></div>
@@ -502,9 +501,14 @@
         <h2>💡 今日提醒</h2>
     </div>
     <div class="tips">
-        <div class="tip"><span class="tip-ic">🏔️</span><span>黃龍海拔3500m！放慢腳步，不要跑步或大口喘氣。帶好氧氣罐（景區門口可買）。</span></div>
-        <div class="tip"><span class="tip-ic">📞</span><span>記得提前2小時打電話給民宿確認高鐵站接送時間和地點。</span></div>
-        <div class="tip"><span class="tip-ic">🎫</span><span>高鐵票記得提前買好！下午的班次很搶手。</span></div>
+        <div class="tip"><span class="tip-ic">🫁</span><span><strong>高反預防：</strong>
+                黃龍海拔比九寨溝高。若感到頭暈氣喘，請在沿途的「吸氧站」休息吸氧（通常免費提供氧氣，只需購買拋棄式吸氧管）。</span></div>
+        <div class="tip"><span class="tip-ic">🧥</span><span><strong>穿著準備：</strong> 5 月黃龍山頂與山腳溫差大，可能有冷風。建議洋蔥式穿法：保暖內層 +
+                抓絨衣 + 防風外套。</span></div>
+        <div class="tip"><span class="tip-ic">☀️</span><span><strong>防曬與水分：</strong>
+                物理防曬（帽子、墨鏡）必備。景區補給站少，請自備高熱量零食（巧克力、堅果）和溫水。</span></div>
+        <div class="tip"><span class="tip-ic">📸</span><span><strong>攝影提示：</strong> 五彩池由於是地下水補給，即使 5
+                月枯水期依然維持著極高的美感，非常適合深度攝影。</span></div>
     </div>
 
     <div class="nav-btns"><a class="btn-prev" href="day5.html">← Day 5</a><a class="btn-next" href="day7.html">Day 7 ·
