feat: 更新 Day 7 都江堰、熊貓谷、鐘書閣與藍眼淚行程

--- a/day7.html
+++ b/day7.html
@@ -334,7 +334,8 @@
 
     <!-- 完整圖片展示區塊 -->
     <div style="padding: 16px 16px 0;">
-        <img src="images/Day7.png" alt="Day 7" style="width: 100%; height: auto; border-radius: 12px; box-shadow: var(--shadow); display: block;">
+        <img src="images/Day7.png" alt="Day 7"
+            style="width: 100%; height: auto; border-radius: 12px; box-shadow: var(--shadow); display: block;">
     </div>
 
     <div class="sec-head">
@@ -348,10 +349,12 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚄 07:30 – 08:30</div>
-                <div class="tl-title">城際高鐵/包車 → 都江堰</div>
-                <div class="tl-desc">從成都搭城際高鐵到都江堰站（約30分鐘），或包車前往（約1小時）。都江堰是成都近郊最值得的一日遊目的地！</div>
-                <div class="tl-tags"><span class="tl-tag">🚄 高鐵</span><span class="tl-tag">⏱ ~30min</span></div>
+                <div class="tl-time">🚄 07:30 – 09:00</div>
+                <div class="tl-title">出發：春熙路 → 都江堰</div>
+                <div class="tl-desc">從春熙路搭乘地鐵 2 號線至「犀浦站」，轉乘成灌快鐵前往「離堆公園站」。建議提前在 12306
+                    預訂高鐵票，目標車站選「離堆公園站」會比首站「都江堰站」更靠近市區景點。</div>
+                <div class="tl-tags"><span class="tl-tag">🚇 地鐵 2 號線</span><span class="tl-tag">🚄 成灌快鐵</span><span
+                        class="tl-tag">📍 離堆公園站</span></div>
             </div>
         </div>
 
@@ -361,12 +364,13 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🐼 09:00 – 12:00</div>
-                <div class="tl-title">都江堰大熊貓繁育野放研究中心（熊貓谷）</div>
+                <div class="tl-time">🐼 09:30 – 11:30</div>
+                <div class="tl-title">熊貓谷 (都江堰野放繁育研究中心)</div>
                 <div class="tl-desc">
-                    比市區的熊貓基地人少很多，環境更貼近自然！這裡專門做大熊貓野化訓練，可以看到在半野化環境中生活的大熊貓。還有超可愛的「小熊貓」（紅熊貓）散養區，牠們會在路邊走來走去，近距離互動！</div>
+                    這裡比成都市區的大熊貓基地人少且安靜，能更近距離觀察熊貓。除了大熊貓，這裡最受歡迎的是「小熊貓放養區」，可以看見牠們在樹林間穿梭。需提前在「熊貓谷」官方微信預約門票（建議滿月開賣即搶購上午票）。
+                </div>
                 <div class="tl-tags"><span class="tl-tag">🐼 熊貓谷</span><span class="tl-tag">🦊 小熊貓</span><span
-                        class="tl-tag">📸 近距離</span><span class="tl-tag">👥 人少</span></div>
+                        class="tl-tag">📸 近距離</span><span class="tl-tag">🎫 預約上午票</span></div>
             </div>
         </div>
 
@@ -376,10 +380,12 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🍜 12:00 – 13:00</div>
-                <div class="tl-title">午餐 · 都江堰當地美食</div>
-                <div class="tl-desc">在都江堰市區用午餐。推薦試試當地特色的「鍋魁」（厚燒餅夾肉）和蹄花湯——軟爛入味的豬蹄膠原蛋白超滿！</div>
-                <div class="tl-tags"><span class="tl-tag">🍜 鍋魁</span><span class="tl-tag">🍲 蹄花湯</span></div>
+                <div class="tl-time">📚 12:00 – 13:30</div>
+                <div class="tl-title">鐘書閣 (融創茂店) + 午餐</div>
+                <div class="tl-desc">這間被譽為「現實版霍格華茲」的書店位於融創茂購物中心 2 樓。利用鏡面反射創造出無限延伸的魔幻空間感，非常適合拍照。午餐可以直接在融創茂內用餐，選擇多樣且環境舒適。
+                </div>
+                <div class="tl-tags"><span class="tl-tag">📚 鐘書閣</span><span class="tl-tag">📸 魔幻書店</span><span
+                        class="tl-tag">🍜 午餐</span></div>
             </div>
         </div>
 
@@ -389,13 +395,30 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🌊 13:30 – 16:30</div>
-                <div class="tl-title">都江堰水利工程 · 世界文化遺產</div>
+                <div class="tl-time">🌊 14:00 – 17:00</div>
+                <div class="tl-title">都江堰景區 (水利工程)</div>
                 <div class="tl-desc">
-                    2300年前李冰父子建造的水利工程，至今仍在運作！三大核心：「魚嘴」將岷江分為內外兩江、「飛沙堰」排除泥沙、「寶瓶口」控制水量灌溉成都平原。站在安瀾索橋上搖搖晃晃，腳下就是奔騰的岷江水，刺激又壯觀！
+                    建議搭計程車前往「秦堰樓入口 (6 號門)」，這是不累人走法！從最高處進入，一路下坡遊覽：秦堰樓 → 二王廟 → 安瀾索橋 → 魚嘴 → 飛沙堰 →
+                    寶瓶口。親身感受李冰父子2300年前建造，至今仍在運作的水利奇蹟！
                 </div>
                 <div class="tl-tags"><span class="tl-tag">🌊 魚嘴</span><span class="tl-tag">⚡ 飛沙堰</span><span
-                        class="tl-tag">🏛️ 寶瓶口</span><span class="tl-tag">🌉 安瀾索橋</span></div>
+                        class="tl-tag">🏛️ 寶瓶口</span><span class="tl-tag">🌉 安瀾索橋</span><span class="tl-tag">🚶
+                        下坡輕鬆遊</span></div>
+            </div>
+        </div>
+
+        <div class="tl-item">
+            <div class="tl-line">
+                <div class="tl-dot"></div>
+                <div class="tl-bar"></div>
+            </div>
+            <div class="tl-card">
+                <div class="tl-time">🤳 17:30 – 19:00</div>
+                <div class="tl-title">仰天窩廣場 + 灌縣古城</div>
+                <div class="tl-desc">
+                    出景區後步行前往仰天窩廣場，打卡巨大的「迪麗熱巴同款」自拍大熊貓。隨後在灌縣古城（西街、楊柳河街）逛逛。美食推薦：鐘鴨子、張醪糟或趙賣面。</div>
+                <div class="tl-tags"><span class="tl-tag">🤳 自拍大熊貓</span><span class="tl-tag">🏘️ 灌縣古城</span><span
+                        class="tl-tag">🦆 鐘鴨子</span><span class="tl-tag">🍜 張醪糟</span></div>
             </div>
         </div>
 
@@ -404,17 +427,18 @@
                 <div class="tl-dot"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🌉 17:00 – 20:00</div>
-                <div class="tl-title">南橋夜景「藍眼淚」🔵</div>
+                <div class="tl-time">🌉 19:30 – 20:30 (之後返程)</div>
+                <div class="tl-title">南橋「藍眼淚」🔵</div>
                 <div class="tl-desc">
-                    傍晚一定要走到都江堰旁的「南橋」！這座雕樑畫棟的廊橋本身就很美，但最神奇的是——夜晚橋下的江水在燈光映照下會變成夢幻的藍色，被當地人稱為「藍眼淚」。超適合拍照！吃個宵夜再搭高鐵回成都。</div>
+                    入夜後，南橋的燈光亮起，江水在藍色燈光映襯下呈現出夢幻的「藍眼淚」奇觀。最佳機位：除了在南橋上拍，下方的天府源廊橋也是拍攝江水流動藍光的絕佳位置。遊覽完畢後從離堆公園站搭高鐵轉地鐵回春熙路。
+                </div>
                 <div class="tl-tags"><span class="tl-tag">🌉 南橋</span><span class="tl-tag">🔵 藍眼淚</span><span
-                        class="tl-tag">📸 夜景必拍</span><span class="tl-tag">🍢 宵夜</span></div>
+                        class="tl-tag">📸 夜景必拍</span><span class="tl-tag">🚄 返回成都</span></div>
             </div>
         </div>
     </div>
 
-    
+
 
     <div class="sec-head">
         <div class="dot" style="background:#0D9488"></div>
@@ -428,7 +452,7 @@
         </div>
     </div>
 
-    
+
 
     <div class="sec-head">
         <div class="dot" style="background:#3B82F6"></div>
@@ -441,10 +465,14 @@
         <h2>💡 今日提醒</h2>
     </div>
     <div class="tips">
-        <div class="tip"><span class="tip-ic">🎫</span><span>明天的三星堆博物館門票非常搶手！請立即確認是否已預訂。微信小程序或攜程/Trip.com。</span></div>
-        <div class="tip"><span class="tip-ic">🐼</span><span>熊貓谷建議早上去，大熊貓上午活動力最強、最愛吃竹子，下午常常在睡覺。</span></div>
-        <div class="tip"><span class="tip-ic">🌉</span><span>南橋「藍眼淚」最佳觀賞時間是天剛黑後的30分鐘（約19:30-20:00），太晚反而效果沒那麼好。</span>
-        </div>
+        <div class="tip"><span class="tip-ic">🎫</span><span><strong>門票預約：</strong> 熊貓谷極熱門，建議提前 7-10
+                天預約（現場通常無票）；都江堰景區可透過「青城山都江堰」公眾號預訂。</span></div>
+        <div class="tip"><span class="tip-ic">🚗</span><span><strong>交通銜接：</strong> 都江堰市內景點間距大多在 15-20
+                分鐘車程，建議直接使用網約車（滴滴）移動最方便。</span></div>
+        <div class="tip"><span class="tip-ic">🧥</span><span><strong>穿著建議：</strong> 5
+                月份晝夜溫差大，白天防日照，晚上江邊看藍眼淚風冷，請務必攜帶輕便防風外套。</span></div>
+        <div class="tip"><span class="tip-ic">💡</span><span><strong>行程體感：</strong>
+                這個走法把最耗體力的熊貓谷與水利工程錯開，中間塞個室內鐘書閣當休息站，體感會非常舒適的！</span></div>
     </div>
 
     <div class="nav-btns"><a class="btn-prev" href="day6.html">← Day 6</a><a class="btn-next" href="day8.html">Day 8 ·
