feat: 更新 Day 8 三星堆行程、交通方式與搶票提示

--- a/day8.html
+++ b/day8.html
@@ -324,7 +324,8 @@
 
     <!-- 完整圖片展示區塊 -->
     <div style="padding: 16px 16px 0;">
-        <img src="images/Day8.png" alt="Day 8" style="width: 100%; height: auto; border-radius: 12px; box-shadow: var(--shadow); display: block;">
+        <img src="images/Day8.png" alt="Day 8"
+            style="width: 100%; height: auto; border-radius: 12px; box-shadow: var(--shadow); display: block;">
     </div>
 
     <div class="sec-head">
@@ -338,10 +339,13 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚄 08:00 – 09:00</div>
-                <div class="tl-title">高鐵 → 三星堆</div>
-                <div class="tl-desc">搭高鐵到「廣漢北站」約30分鐘，或搭景區直通車前往。</div>
-                <div class="tl-tags"><span class="tl-tag">🚄 高鐵</span></div>
+                <div class="tl-time">🚌/🚄 08:30 – 10:00</div>
+                <div class="tl-title">出發：從春熙路前往三星堆</div>
+                <div class="tl-desc">
+                    <strong>方案 A（最推薦）：</strong>景區直通車。在春熙路（通常在 IFS 大爬牆熊貓下方或四川大劇院門口）搭車，一站直達博物館，車程約 1.5 小時。<br>
+                    <strong>方案 B（最快）：</strong>地鐵 2 號線至「成都東站」，轉乘高鐵前往「廣漢北站」（約 20 分鐘），出站後搭 13 路公車或景區接駁車抵達博物館。
+                </div>
+                <div class="tl-tags"><span class="tl-tag">🚌 景區直通車</span><span class="tl-tag">🚄 高鐵+接駁</span></div>
             </div>
         </div>
 
@@ -351,12 +355,15 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🏛️ 09:00 – 13:00</div>
-                <div class="tl-title">三星堆博物館 🔱</div>
-                <div class="tl-desc">3000-5000年前古蜀文明驚人文物！必看鎮館之寶：🌳 青銅神樹（3.96m高）、👤 青銅大立人像（2.6m）、🎭
-                    黃金面具（純金280g）。建議預留3-4小時，掃碼聽語音導覽。</div>
+                <div class="tl-time">🏛️ 10:00 – 13:00</div>
+                <div class="tl-title">三星堆博物館 (新館) 參觀 🔱</div>
+                <div class="tl-desc">
+                    <strong>1F (第一、二展區)：</strong>「世紀逐夢」與「巍然王都」。必看：青銅大立人、金杖、黃金面具。<br>
+                    <strong>2F (第三展區)：</strong>「天地人神」。必看：一號青銅神樹（鎮館之寶）、縱目面具。<br>
+                    <em>💡 提示：如果 1 樓人太多，可以先上 2 樓看神樹，反向參觀避開旅行團！</em>
+                </div>
                 <div class="tl-tags"><span class="tl-tag">🌳 青銅神樹</span><span class="tl-tag">🎭 黃金面具</span><span
-                        class="tl-tag">👤 大立人像</span></div>
+                        class="tl-tag">👤 大立人像</span><span class="tl-tag">🎧 租借導覽</span></div>
             </div>
         </div>
 
@@ -366,9 +373,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🍜 13:00 – 14:00</div>
-                <div class="tl-title">午餐</div>
-                <div class="tl-desc">博物館周邊或廣漢市區用餐。</div>
+                <div class="tl-time">🍦 13:00 – 14:00</div>
+                <div class="tl-title">午餐時間 & 堆堆冰淇淋</div>
+                <div class="tl-desc">博物館內有餐飲區可稍作休息，別忘了到出口處購買著名的「堆堆冰淇淋」打卡拍照！</div>
+                <div class="tl-tags"><span class="tl-tag">🍦 堆堆冰淇淋</span><span class="tl-tag">🍜 館內簡餐</span></div>
             </div>
         </div>
 
@@ -378,10 +386,10 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚄 14:30 – 16:00</div>
-                <div class="tl-title">返回飯店退房拿行李</div>
-                <div class="tl-desc">高鐵回成都東站，前往凱特麗亞飯店拿行李退房。</div>
-                <div class="tl-tags"><span class="tl-tag">🧳 退房</span></div>
+                <div class="tl-time">🏺 14:00 – 15:30</div>
+                <div class="tl-title">文物修復館</div>
+                <div class="tl-desc">從主館出來後，步行前往修復館。這裡可以隔著玻璃看專家現場修復剛出土的文物，非常有臨場感！</div>
+                <div class="tl-tags"><span class="tl-tag">🏺 文物修復</span><span class="tl-tag">🔍 近距離觀察</span></div>
             </div>
         </div>
 
@@ -391,10 +399,23 @@
                 <div class="tl-bar"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🚇 16:30 – 18:00</div>
-                <div class="tl-title">地鐵18號線 → 天府機場</div>
-                <div class="tl-desc">搭地鐵18號線直達天府國際機場，約1-1.5小時。</div>
-                <div class="tl-tags"><span class="tl-tag">🚇 18號線</span></div>
+                <div class="tl-time">🛍️ 15:30 – 16:30</div>
+                <div class="tl-title">文創購物 & 蓋章</div>
+                <div class="tl-desc">三星堆的文創產品非常精緻，「青銅小人」盲盒、書籤都很值得入手。帶著集章本在各處蓋下特色印章。</div>
+                <div class="tl-tags"><span class="tl-tag">🛍️ 文創盲盒</span><span class="tl-tag">💮 集章打卡</span></div>
+            </div>
+        </div>
+
+        <div class="tl-item">
+            <div class="tl-line">
+                <div class="tl-dot"></div>
+                <div class="tl-bar"></div>
+            </div>
+            <div class="tl-card">
+                <div class="tl-time">🔙 16:30 – 18:30</div>
+                <div class="tl-title">返程市區 → 拿行李 → 前往機場</div>
+                <div class="tl-desc">乘坐直通車或接駁車/高鐵返回成都東站/春熙路。先回「凱特麗亞飯店」拿行李，接著搭乘地鐵 18 號線直達天府國際機場。</div>
+                <div class="tl-tags"><span class="tl-tag">🧳 拿行李</span><span class="tl-tag">🚇 地鐵 18 號線</span></div>
             </div>
         </div>
 
@@ -403,15 +424,15 @@
                 <div class="tl-dot"></div>
             </div>
             <div class="tl-card">
-                <div class="tl-time">🏨 18:30</div>
+                <div class="tl-time">🏨 19:30</div>
                 <div class="tl-title">天府空港悅享飯店 Check-in</div>
-                <div class="tl-desc">機場旁飯店，步行或接駁到航廈。早點休息，明天08:10的飛機！</div>
+                <div class="tl-desc">入住機場旁的飯店，可以步行或搭乘接駁車直達航廈。早點休息，明天準備搭機返家！</div>
                 <div class="tl-tags"><span class="tl-tag">🏨 機場飯店</span><span class="tl-tag">😴 早睡</span></div>
             </div>
         </div>
     </div>
 
-    
+
 
     <div class="sec-head">
         <div class="dot" style="background:#0D9488"></div>
@@ -425,7 +446,7 @@
         </div>
     </div>
 
-    
+
 
     <div class="sec-head">
         <div class="dot" style="background:#3B82F6"></div>
@@ -438,10 +459,14 @@
         <h2>💡 今日提醒</h2>
     </div>
     <div class="tips">
-        <div class="tip"><span class="tip-ic">🎫</span><span>三星堆門票非常搶手！確認已預訂。開放08:30-17:00。</span></div>
-        <div class="tip"><span class="tip-ic">📱</span><span>語音導覽很重要！掃碼免費聽講解。</span></div>
-        <div class="tip"><span class="tip-ic">⏰</span><span>明天CX917 08:10起飛，建議05:30起床、06:00出發到航廈。</span></div>
-        <div class="tip"><span class="tip-ic">🧳</span><span>最後一晚整理行李！護照、伴手禮、充電器都收好。</span></div>
+        <div class="tip"><span class="tip-ic">🎫</span><span><strong>搶票預約（核心）：</strong> 三星堆現場不售票！務必於微信公眾號提前搶票，每日 20:00
+                發放未來 5 天門票（例：週一搶週六），週末節假日極度搶手。</span></div>
+        <div class="tip"><span class="tip-ic">🎧</span><span><strong>語音導覽：</strong> 沒聽講解等於看破銅爛鐵！強烈建議租用語音導覽器（約 20
+                元）或使用公眾號手機導覽。</span></div>
+        <div class="tip"><span class="tip-ic">📸</span><span><strong>拍照機位：</strong> 2 樓的「青銅神樹」與 1
+                樓的「縱目面具」是必拍大景，建議用廣角鏡頭拍攝。</span></div>
+        <div class="tip"><span class="tip-ic">🧳</span><span><strong>行李提醒：</strong>
+                今晚將入住機場飯店，請從市區拿好所有行李並檢查護照與隨身碎物。</span></div>
     </div>
 
     <div class="nav-btns"><a class="btn-prev" href="day7.html">← Day 7</a><a class="btn-next" href="day9.html">Day 9 ·
